# rectojump

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/fonts/: LICENSE.Ubuntu-Font
include/rectojump/core/: game.hpp  game_handler.hpp  game_updater.hpp  game_window.hpp  main_menu.hpp  render.hpp  state.hpp
include/rectojump/game/: basic_entity.hpp  basic_entity.inl  camera.hpp  collision.hpp  debug_info.hpp  debug_info.inl  entity.hpp  entity_base.hpp  entity_groups.hpp  entity_handler.hpp  entity_handler.inl  entity_rect.hpp  factory.hpp  hud.hpp  main_menu.hpp  particle.hpp  particle_manager.hpp  player.hpp  popup.hpp  popup_manager.hpp  world.hpp
include/rectojump/game/background/: background_component.hpp  background_manager.hpp  basic_background_component.hpp
include/rectojump/game/components/: button.hpp  ent_triangles4.hpp  gradient_rect.hpp  platform.hpp  platfrom.hpp  player.hpp  star5.hpp  triangle.hpp  triangles4.hpp  vertex4.hpp
include/rectojump/game/editor/: background_editor.hpp  button_item.hpp  editor.hpp  editor_entity.hpp  itembar.hpp  mouse.hpp  settingsbar.hpp
include/rectojump/game/game_menu/: game_menu.hpp
include/rectojump/game/main_menu/: background.hpp  background_main_menu.hpp  basic_component.hpp  component_manager.hpp  item.hpp  items.hpp  level_square.hpp  level_squares.hpp  main_menu.hpp  menu.hpp  menu_component.hpp  menu_levels.hpp  (+12 more)
include/rectojump/global/: common.hpp  config.hpp  config_parser.hpp  config_settings.hpp  error_inserter.hpp  errors.hpp
include/rectojump/shared/: data_manager.hpp  data_store.hpp  debug_text.hpp  error_handler.hpp  gradient_rect.hpp  input.hpp  utils.hpp
include/rectojump/ui/: button.hpp  connected_buttons.hpp  level_widget.hpp  level_widget_item.hpp  sf_widget.hpp  stacked_widget.hpp  textbox.hpp  widget.hpp
src/rectojump/core/: main.cpp  render.cpp
(+10 files in other folders)
